[gd_scene load_steps=2 format=2]

[ext_resource path="res://editor tools/forms/atomic_value.gd" type="Script" id=1]

[node name="WindowDialog" type="WindowDialog"]
margin_right = 1526.0
margin_bottom = 676.0
window_title = "value formula"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1516.0
margin_bottom = 666.0

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1506.0
margin_bottom = 51.0
text = "Warning! In case of manual result editing consider all operators as having the same priority - a+b*c is (a+b)*c
Warning! Use argument links and argument helper hints with caution."
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 1506.0
margin_bottom = 117.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 283.0
margin_bottom = 62.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 283.0
margin_bottom = 24.0
text = "Parent effect (for helper)"

[node name="parent" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 283.0
margin_bottom = 58.0

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 287.0
margin_right = 353.0
margin_bottom = 62.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 66.0
margin_bottom = 24.0
text = "Mode"

[node name="mode" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 28.0
margin_right = 66.0
margin_bottom = 58.0

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer" groups=[
"arg",
"mode1",
"mode2",
]]
margin_left = 357.0
margin_right = 468.0
margin_bottom = 62.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
margin_right = 111.0
margin_bottom = 24.0
text = "Sub-value"

[node name="mode" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
margin_top = 28.0
margin_right = 111.0
margin_bottom = 58.0
text = "setup"

[node name="VBoxContainer4" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer" groups=[
"arg",
"mode1",
"mode2",
]]
margin_left = 472.0
margin_right = 567.0
margin_bottom = 62.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer4"]
margin_right = 95.0
margin_bottom = 24.0
text = "operand"

[node name="operand" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer4"]
margin_top = 28.0
margin_right = 95.0
margin_bottom = 58.0

[node name="VBoxContainer5" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer" groups=[
"arg",
"mode2",
]]
margin_left = 571.0
margin_right = 682.0
margin_bottom = 62.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer5"]
margin_right = 111.0
margin_bottom = 24.0
text = "Sub-value"

[node name="mode" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer5"]
margin_top = 28.0
margin_right = 111.0
margin_bottom = 58.0
text = "setup"

[node name="VBoxContainer6" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer" groups=[
"arg",
"mode0",
"mode1",
]]
margin_left = 686.0
margin_right = 792.0
margin_bottom = 62.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer6"]
margin_right = 106.0
margin_bottom = 24.0
text = "Constant"

[node name="const" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer6"]
margin_top = 28.0
margin_right = 106.0
margin_bottom = 62.0

[node name="VBoxContainer7" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer" groups=[
"arg",
"mode3",
"mode31",
"mode32",
"mode33",
]]
margin_left = 796.0
margin_right = 862.0
margin_bottom = 62.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer7"]
margin_right = 66.0
margin_bottom = 24.0
text = "Mode"

[node name="type" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer7"]
margin_top = 28.0
margin_right = 66.0
margin_bottom = 58.0

[node name="VBoxContainer8" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer" groups=[
"arg",
"mode31",
"mode32",
]]
margin_left = 866.0
margin_right = 980.0
margin_bottom = 62.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer8"]
margin_right = 114.0
margin_bottom = 24.0
text = "argument"

[node name="arg" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer8"]
margin_top = 28.0
margin_right = 114.0
margin_bottom = 58.0

[node name="VBoxContainer9" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer" groups=[
"arg",
"mode32",
]]
margin_left = 984.0
margin_right = 1086.0
margin_bottom = 62.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer9"]
margin_right = 102.0
margin_bottom = 24.0
text = "attribute"

[node name="arg" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer9"]
margin_top = 28.0
margin_right = 102.0
margin_bottom = 62.0

[node name="VBoxContainer10" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer" groups=[
"arg",
"mode33",
]]
margin_left = 1090.0
margin_right = 1160.0
margin_bottom = 62.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer10"]
margin_right = 70.0
margin_bottom = 24.0
text = "from"

[node name="arg" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer10"]
margin_top = 28.0
margin_right = 70.0
margin_bottom = 62.0

[node name="VBoxContainer11" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer" groups=[
"arg",
"mode33",
]]
margin_left = 1164.0
margin_right = 1234.0
margin_bottom = 62.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer11"]
margin_right = 70.0
margin_bottom = 24.0
text = "to"

[node name="arg" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer11"]
margin_top = 28.0
margin_right = 70.0
margin_bottom = 62.0

[node name="Label" type="TextEdit" parent="MarginContainer/VBoxContainer"]
margin_top = 121.0
margin_right = 1506.0
margin_bottom = 369.0
rect_min_size = Vector2( 0, 40 )
size_flags_vertical = 3

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 373.0
margin_right = 1506.0
margin_bottom = 621.0
rect_min_size = Vector2( 0, 40 )
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 625.0
margin_right = 1506.0
margin_bottom = 655.0

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 47.0
margin_bottom = 30.0
text = "OK"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 51.0
margin_right = 140.0
margin_bottom = 30.0
text = "Cancel"
[connection signal="item_selected" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/parent" to="." method="select_parent"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/mode" to="." method="mode_select"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/mode" to="." method="call_form1"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer5/mode" to="." method="call_form2"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer7/type" to="." method="mode2_select"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer8/arg" to="." method="update_res"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Button" to="." method="commit"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Button2" to="." method="revert"]
